<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.share.dev</groupId>
	<artifactId>database-transform-tool</artifactId>
	<version>1.0.0</version>
	<name>database-transform-tool</name>
	<description>database-transform-tool</description>
	<!-- <parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent> -->
	<properties>
		<java.version>1.8</java.version>
		<java.encoding>UTF-8</java.encoding>
		<maven.test.skip>true</maven.test.skip>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<spring-boot.version>2.0.5.RELEASE</spring-boot.version>
		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
		<!-- <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
		<spring-cloud.version>Edgware.SR4</spring-cloud.version> -->
		<log4j2.version>2.9.0</log4j2.version>
		<httpclient.version>4.5.6</httpclient.version>
		<guava.version>23.0</guava.version>
		<druid.version>1.1.10</druid.version>
		<canal.version>1.1.0</canal.version>
		<fastjson.version>1.2.49</fastjson.version>
		<h2.version>1.4.197</h2.version>
		<hsqldb.version>2.4.1</hsqldb.version>
		<mysql.version>5.1.47</mysql.version>
		<postgresql.version>42.2.5</postgresql.version>
		<sqlserver.version>4.0</sqlserver.version>
		<oracle.version>12.1.0.2</oracle.version>
		<elasticsearch.version>6.2.2</elasticsearch.version>
		<spring-data-elasticsearch.version>3.0.10.RELEASE</spring-data-elasticsearch.version>
		<cassandra-driver.version>3.6.0</cassandra-driver.version>
		<mongodb.version>3.8.1</mongodb.version>
		<kafka.version>1.0.2</kafka.version>
		<!-- <kafka.version>0.11.0.2</kafka.version> -->
	</properties>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/dev-share/database-transform-tool</url>
		<connection>git@github.com:dev-share/database-transform-tool.git</connection>
		<developerConnection>https://github.com/dev-share/database-transform-tool</developerConnection>
	</scm>
	<developers>
		<developer>
			<name>kervin</name>
			<email>zy5211314521@outlook.com</email>
			<url>https://github.com/dev-share/database-transform-tool</url>
		</developer>
	</developers>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
				<exclusions>
					<exclusion>
					    <groupId>com.datastax.cassandra</groupId>
					    <artifactId>cassandra-driver-mapping</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-parent</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
            	<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>${druid.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.alibaba.otter</groupId>
			<artifactId>canal.client</artifactId>
			<version>${canal.version}</version>
		</dependency>
		<!-- <dependency>
			<groupId>com.alibaba.otter</groupId>
			<artifactId>canal.server</artifactId>
			<version>${canal.version}</version>
		</dependency> -->
		
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.hsqldb</groupId>
		    <artifactId>hsqldb</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>sqljdbc4</artifactId>
		    <version>${sqlserver.version}</version>
		</dependency>
		<!-- <dependency>
		    <groupId>sqlserver</groupId>
		    <artifactId>sqlserver</artifactId>
		    <version>4.0.2206.100</version>
		</dependency> -->
		
		
		<dependency>
		    <groupId>com.oracle</groupId>
		    <artifactId>ojdbc5</artifactId>
		    <version>11.2.0.3</version>
		</dependency>
		<dependency>
		    <groupId>com.oracle</groupId>
		    <artifactId>ojdbc6</artifactId>
		    <!-- <artifactId>ojdbc7</artifactId>
		    <artifactId>orai18n</artifactId> -->
		    <version>${oracle.version}</version>
		</dependency>
		
		<!-- <dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>transport</artifactId>
			<version>${elasticsearch.version}</version>
		</dependency> -->
		<dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>x-pack-transport</artifactId>
			<version>${elasticsearch.version}</version>
		</dependency>
		<dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>elasticsearch-rest-high-level-client</artifactId>
			<version>${elasticsearch.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-elasticsearch</artifactId>
		</dependency>
		
		<!-- <dependency>
		    <groupId>org.apache.cassandra</groupId>
		    <artifactId>cassandra-all</artifactId>
		    <version>3.11.3</version>
		</dependency> -->
		<dependency>
		    <groupId>com.datastax.cassandra</groupId>
		    <artifactId>cassandra-driver-mapping</artifactId>
		    <!-- <version>${cassandra-driver.version}</version> -->
		</dependency>
		<dependency>
		    <groupId>org.mongodb</groupId>
		    <artifactId>mongo-java-driver</artifactId>
		   <!--  <version>${mongodb.version}</version> -->
		</dependency>
		
		<dependency>
		    <groupId>org.apache.kafka</groupId>
		    <artifactId>kafka_2.11</artifactId>
		    <!-- <version>${kafka.version}</version> -->
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<!-- build-info,repackage -->
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<encoding>${java.encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Change>${maven.build.timestamp}</Change>
							<Built-Date>${maven.build.timestamp}</Built-Date>
						</manifestEntries>
						<manifest>
							<mainClass>com.share.swing.Main</mainClass>
						</manifest>
					</archive>
					<excludes>
						<exclude>bin/*</exclude>
					</excludes>
				</configuration>
			</plugin> -->
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin> -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<binFileName>restart</binFileName>
					<binFolder>bin</binFolder>
					<configurationDirectory>conf</configurationDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<target>${project.build.directory}</target>
					<daemons>
						<daemon>
							<id>${project.name}</id>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<mainClass>com.share.swing.Main</mainClass>
							<wrapperLogFile>logs/${project.name}.log</wrapperLogFile>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>macosx-universal-64</include>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>
									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.ping.timeout</name>
											<value>300</value>
										</property>
										<property>
											<name>wrapper.startup.timeout</name>
											<value>300</value>
										</property>
									</configuration>
								</generatorConfiguration>
							</generatorConfigurations>
							<jvmSettings>
								<extraArguments>
									<extraArgument>-server</extraArgument>
									<extraArgument>-Xms128m</extraArgument>
									<extraArgument>-Xmx128m</extraArgument>
									<extraArgument>-Xmn60m</extraArgument>
									<extraArgument>-XX:+UseG1GC</extraArgument>
									<extraArgument>-Xloggc:/tmp/log/gc.log</extraArgument>
									<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
									<extraArgument>-XX:+PrintGCDetails</extraArgument>
									<extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
									<!--火焰图,只支持JDK8 -->
									<!--<extraArgument>-XX:+PreserveFramePointer</extraArgument> -->
									<!--测试SSL -->
									<!--<extraArgument>-Djavax.net.debug=ssl</extraArgument> -->
									<!--定位OOM时启用 -->
									<!--<extraArgument>-Dio.netty.leakDetectionLevel=paranoid</extraArgument> -->
									<!--<extraArgument>-Dio.netty.allocator.tinyCacheSize=0</extraArgument> -->
									<!--<extraArgument>-Dio.netty.allocator.smallCacheSize=0</extraArgument> -->
									<!--<extraArgument>-Dio.netty.allocator.normalCacheSize=0</extraArgument> -->
								</extraArguments>
							</jvmSettings>
						</daemon>
					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw-scripts</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
							<goal>create-repository</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>Sonatype</id>
			<!-- <url>https://oss.sonatype.org/content/repositories/releases/</url> -->
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>Sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>